# Cardozo

./: .gitignore  Cardozo.spec  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
data/column_p1/: section 7.dxf
docs/: dxf_specs.md  src_structure.md  windows_release_github_actions.md
dxf_files/: teste polígono 2.dxf  teste polígono.dxf
scripts/: build_exe.bat  run_dev.bat  run_dev.sh
src/: dxf_parser.py  geometry_builder.py  main.py  main_analysis.py  materials.py  test.py
src/backend/: dxf_parser.py  geometry_builder.py
src/cardozo/: __init__.py  main.py
src/cardozo/backend/: dxf_parser.py  geometry_builder.py  nbr6118.py
src/cardozo/data/: std_materials.py
src/cardozo/frontend/: app_window.py
src/data/: std_materials.py
src/frontend/: app_window.py
tests/: test_column.py  test_dxf_parser.py  test_geometry_builder.py  test_imports.py
