[project]
name = "cardozo"
version = "0.1.0"
description = "Biaxial bending analysis software for arbitrary reinforced concrete sections."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Tarso Bessa", email = "bessatarso@gmail.com" }
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
